--- a/style.css
+++ b/style.css
@@ -4,10 +4,61 @@
     box-sizing: border-box;
 }
 
-.image-container{
-    box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.705);
-    height: 100%;
+.container{
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100vh;
+}
+
+.image-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.image-box{
+    box-shadow: 0px 0px 15px rgb(0, 0, 0);
+    width: 100%;
+    max-width: 600px;
+    margin: 0;
+    height: 400px;
+    max-height: 100%;
+    display: flex;
+    flex-direction: column;
+    border-radius: 5px;
+}
+
+#image{
+    height: 100%;
+    width: 100%;
+    border-radius: 5px;
+    position: relative;
+}
+
+.center-row{
+    display: flex;
+}
+
+.center-row button{
+    margin: 0 2rem;
+}
+
+.bottom-row button, .top-row button{
+    margin: 2rem 0;
+}
+
+.bottom-row button, .top-row button, .center-row button{
+    padding: 1rem;
+    font-size: 1.5rem;
+    border-radius: 5px;
+    border: 1px solid black;
+    outline: none;
+    cursor: pointer;
+    transition: .3s ease;
+    background: white;
+}
+
+.bottom-row button:hover, .top-row button:hover, .center-row button:hover{
+    background-color: rgb(211, 211, 211);
 }
