--- a/style.css
+++ b/style.css
@@ -4,10 +4,15 @@
     box-sizing: border-box;
 }
 
+body{
+    font-family: sans-serif;
+}
+
 .container{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     height: 100vh;
 }
 
@@ -20,9 +25,9 @@
 .image-box{
     box-shadow: 0px 0px 15px rgb(0, 0, 0);
     width: 100%;
-    max-width: 600px;
+    max-width: 250px;
     margin: 0;
-    height: 400px;
+    height: 250px;
     max-height: 100%;
     display: flex;
     flex-direction: column;
@@ -38,6 +43,7 @@
 
 .center-row{
     display: flex;
+    align-items: center;
 }
 
 .center-row button{
@@ -49,12 +55,13 @@
 }
 
 .bottom-row button, .top-row button, .center-row button{
-    padding: 1rem;
     font-size: 1.5rem;
     border-radius: 5px;
     border: 1px solid black;
     outline: none;
     cursor: pointer;
+    width: 50px;
+    height: 50px;
     transition: .3s ease;
     background: white;
 }
@@ -62,3 +69,42 @@
 .bottom-row button:hover, .top-row button:hover, .center-row button:hover{
     background-color: rgb(211, 211, 211);
 }
+
+.image-input{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+
+#image-url-input {
+    margin: 1rem 0;
+    width: 400px;
+    border: 0;
+    box-shadow: 0px 0px 5px black;
+    border-radius: 5px;
+    height: 35px;
+    outline: none;
+    padding: 5px;
+}
+
+#new-image-button {
+    width: 200px;
+    border: 0;
+    transition: .3s ease;
+    border-radius: 5px;
+    background-color: rgb(106, 116, 207);
+    height: 35px;
+    color: white;
+    box-shadow: 0px 0px 5px black;
+    cursor: pointer;
+    outline: none;
+    font-size: 1.25rem;
+}
+
+
+#new-image-button:hover {
+    background-color: rgb(57, 66, 146);
+}
+
